--- a/GedPiDev.RestAPI/GedPiDev.RestAPI.csproj
+++ b/GedPiDev.RestAPI/GedPiDev.RestAPI.csproj
@@ -224,12 +224,14 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AttachementsController.cs" />
     <Compile Include="Controllers\CorrespondentsController.cs" />
-    <Compile Include="Controllers\Courriers1Controller.cs" />
     <Compile Include="Controllers\CourriersController.cs" />
     <Compile Include="Controllers\DepartmentsController.cs" />
+    <Compile Include="Controllers\DocumentsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\WorkflowsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
