--- a/WebApplication1/GedPiDev.RestApi.csproj
+++ b/WebApplication1/GedPiDev.RestApi.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AccountManagerMVCController.cs" />
     <Compile Include="Controllers\AdresseController.cs" />
+    <Compile Include="Controllers\ApplicationUserController.cs" />
     <Compile Include="Controllers\AttachementsController.cs" />
     <Compile Include="Controllers\CorrespondentsController.cs" />
     <Compile Include="Controllers\CourrierController.cs" />
